samples/_failures_safe/1761276390_f68db8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_917ff58f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_917ff58f.c:165:36: error: expected ‘]’ at end of input
  165 |         tokens[token_count].value[0
      |                                    ^
      |                                    ]
./samples/SAFE/__tmp_917ff58f.c:165:9: error: expected declaration or statement at end of input
  165 |         tokens[token_count].value[0
      |         ^~~~~~
./samples/SAFE/__tmp_917ff58f.c:165:9: error: expected declaration or statement at end of input
